--- a/website/src/pages/docs/operations.astro
+++ b/website/src/pages/docs/operations.astro
@@ -1,9 +1,7 @@
 ---
 import DocsLayout from "../../layouts/DocsLayout.astro";
-import OperationsDoc from "../../../../docs/guides/operations.md";
+import OperationsDoc from "../../content/docs/guides/operations.md";
 ---
-<DocsLayout title="Tako Docs - Operations" heading="operations">
-  <p>Rendered from: <code>docs/guides/operations.md</code>.</p>
-  <p><a href="/docs">← docs</a></p>
+<DocsLayout title="Tako Docs - Operations" heading="Operations" current="operations">
   <OperationsDoc />
 </DocsLayout>
