--- a/website/src/pages/docs/quickstart.astro
+++ b/website/src/pages/docs/quickstart.astro
@@ -1,9 +1,7 @@
 ---
 import DocsLayout from "../../layouts/DocsLayout.astro";
-import QuickstartDoc from "../../../../docs/guides/quickstart.md";
+import QuickstartDoc from "../../content/docs/guides/quickstart.md";
 ---
-<DocsLayout title="Tako Docs - Quickstart" heading="quickstart">
-  <p>Rendered from: <code>docs/guides/quickstart.md</code>.</p>
-  <p><a href="/docs">← docs</a></p>
+<DocsLayout title="Tako Docs - Quickstart" heading="Quickstart" current="quickstart">
   <QuickstartDoc />
 </DocsLayout>
