--- a/website/src/pages/docs/tako-toml.astro
+++ b/website/src/pages/docs/tako-toml.astro
@@ -1,9 +1,7 @@
 ---
 import DocsLayout from "../../layouts/DocsLayout.astro";
-import TakoTomlDoc from "../../../../docs/reference/tako-toml.md";
+import TakoTomlDoc from "../../content/docs/reference/tako-toml.md";
 ---
-<DocsLayout title="Tako Docs - tako.toml" heading="tako.toml">
-  <p>Rendered from: <code>docs/reference/tako-toml.md</code>.</p>
-  <p><a href="/docs">← docs</a></p>
+<DocsLayout title="Tako Docs - tako.toml" heading="tako.toml" current="tako-toml">
   <TakoTomlDoc />
 </DocsLayout>
