--- a/website/src/components/NavLinks.astro
+++ b/website/src/components/NavLinks.astro
@@ -1,7 +1,9 @@
+---
+import { Star } from "lucide-astro";
+---
+
 <a href="/docs">docs</a>
 <a href="https://github.com/lilienblum/tako" target="_blank" rel="noopener noreferrer" class="github-star">
-  <svg class="star-icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
-    <path d="M12 2.8l2.7 5.47 6.03.88-4.36 4.25 1.03 6.01L12 16.64l-5.4 2.84 1.03-6.01L3.27 9.15l6.03-.88L12 2.8z" />
-  </svg>
+  <Star class="star-icon" aria-hidden="true" focusable="false" />
   <span>github</span>
 </a>
