--- a/website/src/pages/docs/development.astro
+++ b/website/src/pages/docs/development.astro
@@ -1,9 +1,7 @@
 ---
 import DocsLayout from "../../layouts/DocsLayout.astro";
-import DevelopmentDoc from "../../../../docs/guides/development.md";
+import DevelopmentDoc from "../../content/docs/guides/development.md";
 ---
-<DocsLayout title="Tako Docs - Development" heading="development">
-  <p>Rendered from: <code>docs/guides/development.md</code>.</p>
-  <p><a href="/docs">← docs</a></p>
+<DocsLayout title="Tako Docs - Development" heading="Development" current="development">
   <DevelopmentDoc />
 </DocsLayout>
