--- a/website/src/pages/docs/architecture.astro
+++ b/website/src/pages/docs/architecture.astro
@@ -1,7 +1,7 @@
 ---
 import DocsLayout from "../../layouts/DocsLayout.astro";
-import ArchitectureDoc from "../../content/docs/architecture/overview.md";
+import ArchitectureDoc from "../../../../docs/architecture/overview.md";
 ---
-<DocsLayout title="Tako Docs - Architecture" heading="Architecture" current="architecture">
+<DocsLayout title="Tako Docs - How Tako Works" heading="How Tako Works" current="architecture">
   <ArchitectureDoc />
 </DocsLayout>
