--- a/website/src/pages/docs/cli.astro
+++ b/website/src/pages/docs/cli.astro
@@ -1,6 +1,6 @@
 ---
 import DocsLayout from "../../layouts/DocsLayout.astro";
-import CliDoc from "../../content/docs/reference/cli.md";
+import CliDoc from "../../../../docs/reference/cli.md";
 ---
 <DocsLayout title="Tako Docs - CLI Reference" heading="CLI Reference" current="cli">
   <CliDoc />
