--- a/website/src/pages/docs/deployment.astro
+++ b/website/src/pages/docs/deployment.astro
@@ -1,6 +1,6 @@
 ---
 import DocsLayout from "../../layouts/DocsLayout.astro";
-import DeploymentDoc from "../../content/docs/guides/deployment.md";
+import DeploymentDoc from "../../../../docs/guides/deployment.md";
 ---
 <DocsLayout title="Tako Docs - Deployment" heading="Deployment" current="deployment">
   <DeploymentDoc />
