--- a/website/src/pages/docs/index.astro
+++ b/website/src/pages/docs/index.astro
@@ -1,6 +1,6 @@
 ---
 import DocsLayout from "../../layouts/DocsLayout.astro";
-import OverviewDoc from "../../content/docs/README.md";
+import OverviewDoc from "../../../../docs/README.md";
 ---
 <DocsLayout title="Tako Docs - The Why" heading="The Why" current="intro">
   <OverviewDoc />
