--- a/website/src/pages/docs/operations.astro
+++ b/website/src/pages/docs/operations.astro
@@ -1,6 +1,6 @@
 ---
 import DocsLayout from "../../layouts/DocsLayout.astro";
-import OperationsDoc from "../../content/docs/guides/operations.md";
+import OperationsDoc from "../../../../docs/guides/operations.md";
 ---
 <DocsLayout title="Tako Docs - Operations" heading="Operations" current="operations">
   <OperationsDoc />
