--- a/website/src/pages/docs/quickstart.astro
+++ b/website/src/pages/docs/quickstart.astro
@@ -1,6 +1,6 @@
 ---
 import DocsLayout from "../../layouts/DocsLayout.astro";
-import QuickstartDoc from "../../content/docs/guides/quickstart.md";
+import QuickstartDoc from "../../../../docs/guides/quickstart.md";
 ---
 <DocsLayout title="Tako Docs - Quickstart" heading="Quickstart" current="quickstart">
   <QuickstartDoc />
