--- a/website/src/pages/docs/development.astro
+++ b/website/src/pages/docs/development.astro
@@ -1,6 +1,6 @@
 ---
 import DocsLayout from "../../layouts/DocsLayout.astro";
-import DevelopmentDoc from "../../content/docs/guides/development.md";
+import DevelopmentDoc from "../../../../docs/guides/development.md";
 ---
 <DocsLayout title="Tako Docs - Development" heading="Development" current="development">
   <DevelopmentDoc />
