--- a/website/src/pages/docs/tako-toml.astro
+++ b/website/src/pages/docs/tako-toml.astro
@@ -1,6 +1,6 @@
 ---
 import DocsLayout from "../../layouts/DocsLayout.astro";
-import TakoTomlDoc from "../../content/docs/reference/tako-toml.md";
+import TakoTomlDoc from "../../../../docs/reference/tako-toml.md";
 ---
 <DocsLayout title="Tako Docs - tako.toml" heading="tako.toml" current="tako-toml">
   <TakoTomlDoc />
